# small-banc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  smallbanc-cli.cpp  smallbanc-objc-cli.mm  smallbanc-objc-impl.h  smallbanc-objc-impl.mm
smallbanc/: CMakeLists.txt  actions.hpp  argparse.cpp  argparse.h  argparse.hpp  client.cpp  client.hpp  io.cpp  io.h  io.hpp  ledger.cpp  ledger.h  ledger.hpp  model.cpp  model.h  model.hpp  record.h
tests/: CMakeLists.txt  test_ledger.cpp
